--- a/environment.yml
+++ b/environment.yml
@@ -4,324 +4,324 @@ channels:
   - https://teaching:scorefunction@conda.graylab.jhu.edu
   - conda-forge
 dependencies:
-  - _r-mutex=1.0.0=anacondar_1
-  - appnope=0.1.2=py39hecd8cb5_1001
-  - argon2-cffi=20.1.0=py39h9ed2024_1
-  - async_generator=1.10=pyhd3eb1b0_0
-  - attrs=21.2.0=pyhd3eb1b0_0
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - bleach=4.0.0=pyhd3eb1b0_0
-  - bwidget=1.9.11=1
-  - bzip2=1.0.8=h1de35cc_0
-  - c-ares=1.17.1=h9ed2024_0
-  - ca-certificates=2021.7.5=hecd8cb5_1
-  - cairo=1.16.0=he43a7df_1008
-  - cctools_osx-64=973.0.1=h3e07e27_0
-  - certifi=2021.5.30=py39hecd8cb5_0
-  - cffi=1.14.6=py39h2125817_0
-  - clang=12.0.1=h694c41f_0
-  - clang-12=12.0.1=default_he082bbe_0
-  - clang_osx-64=12.0.1=hb91bd55_0
-  - clangxx=12.0.1=default_he082bbe_0
-  - clangxx_osx-64=12.0.1=h7e1b574_0
-  - compiler-rt=12.0.1=he01351e_0
-  - compiler-rt_osx-64=12.0.1=hd3f61c9_0
-  - curl=7.78.0=h7bc2e8c_0
-  - decorator=5.0.9=pyhd3eb1b0_0
-  - defusedxml=0.7.1=pyhd3eb1b0_0
-  - entrypoints=0.3=py39hecd8cb5_0
-  - font-ttf-dejavu-sans-mono=2.37=h6964260_0
-  - font-ttf-inconsolata=2.001=hcb22688_0
-  - font-ttf-source-code-pro=2.030=h7457263_0
-  - font-ttf-ubuntu=0.83=h8b1ccd4_0
-  - fontconfig=2.13.1=ha9ee91d_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - freetype=2.10.4=ha233b18_0
-  - fribidi=1.0.10=haf1e3a3_0
-  - gettext=0.21.0=h7535e17_0
-  - gfortran_impl_osx-64=9.3.0=h9cc0e5e_23
-  - gfortran_osx-64=9.3.0=h18f7dce_14
-  - gmp=6.2.1=h23ab428_2
-  - graphite2=1.3.14=h38d11af_0
-  - gsl=2.6=h71c5fe9_2
-  - harfbuzz=2.9.0=h159f659_0
-  - icu=68.1=h23ab428_0
-  - importlib-metadata=3.10.0=py39hecd8cb5_0
-  - importlib_metadata=3.10.0=hd3eb1b0_0
-  - ipykernel=5.3.4=py39h01d92e1_0
-  - ipython=7.26.0=py39h01d92e1_0
-  - ipython_genutils=0.2.0=pyhd3eb1b0_1
-  - isl=0.22.1=hb1e8313_2
-  - jbig=2.1=h4d881f8_0
-  - jedi=0.18.0=py39hecd8cb5_1
-  - jinja2=3.0.1=pyhd3eb1b0_0
-  - jpeg=9d=hbcb3906_0
-  - jsonschema=3.2.0=py_2
-  - jupyter_client=6.1.12=pyhd3eb1b0_0
-  - jupyter_core=4.7.1=py39hecd8cb5_0
-  - jupyterlab_pygments=0.1.2=py_0
-  - krb5=1.19.2=hcd88c3b_0
-  - ld64_osx-64=609=h2487922_0
-  - ldid=2.1.2=h7660a38_2
-  - lerc=2.2.1=h23ab428_0
-  - libblas=3.9.0=11_osx64_openblas
-  - libcblas=3.9.0=11_osx64_openblas
-  - libclang-cpp12=12.0.1=default_he082bbe_0
-  - libcurl=7.78.0=hb8e4fae_0
-  - libcxx=12.0.1=habf9029_0
-  - libdeflate=1.7=h9ed2024_5
-  - libedit=3.1.20210216=h9ed2024_1
-  - libev=4.33=haf1e3a3_0
-  - libffi=3.3=hb1e8313_2
-  - libgfortran=5.0.0=9_3_0_h6c81a4c_23
-  - libgfortran-devel_osx-64=9.3.0=h6c81a4c_23
-  - libgfortran5=9.3.0=h6c81a4c_23
-  - libglib=2.68.4=hd556434_0
-  - libiconv=1.16=h1de35cc_0
-  - liblapack=3.9.0=11_osx64_openblas
-  - libllvm12=12.0.1=hd011deb_2
-  - libnghttp2=1.41.0=h7580e61_2
-  - libopenblas=0.3.17=openmp_h3351f45_1
-  - libpng=1.6.37=ha441bb4_0
-  - libsodium=1.0.18=h1de35cc_0
-  - libssh2=1.9.0=ha12b0ac_1
-  - libtiff=4.3.0=h1167814_1
-  - libv8=8.9.83=h3581248_0
-  - libwebp-base=1.2.0=h9ed2024_0
-  - libxml2=2.9.12=h93ec3fd_0
-  - llvm-openmp=12.0.1=hda6cdc1_1
-  - llvm-tools=12.0.1=hd011deb_2
-  - lz4-c=1.9.3=h23ab428_1
-  - make=4.2.1=h3efe00b_1
-  - markupsafe=2.0.1=py39h9ed2024_0
-  - matplotlib-inline=0.1.2=pyhd3eb1b0_2
-  - mistune=0.8.4=py39h9ed2024_1000
-  - mpc=1.1.0=h6ef4df4_1
-  - mpfr=4.0.2=h9066e36_1
-  - nbclient=0.5.3=pyhd3eb1b0_0
-  - nbconvert=6.1.0=py39hecd8cb5_0
-  - nbformat=5.1.3=pyhd3eb1b0_0
-  - ncurses=6.2=h0a44026_1
-  - nest-asyncio=1.5.1=pyhd3eb1b0_0
-  - notebook=6.4.3=py39hecd8cb5_0
-  - openssl=1.1.1k=h9ed2024_0
-  - packaging=21.0=pyhd3eb1b0_0
-  - pandoc=2.12=hecd8cb5_0
-  - pandocfilters=1.4.3=py39hecd8cb5_1
-  - pango=1.48.9=ha05cd14_0
-  - parso=0.8.2=pyhd3eb1b0_0
-  - pcre=8.45=h23ab428_0
-  - pcre2=10.37=ha16e1b2_0
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pip=21.2.4=py37hecd8cb5_0
-  - pixman=0.40.0=haf1e3a3_0
-  - prometheus_client=0.11.0=pyhd3eb1b0_0
-  - prompt-toolkit=3.0.17=pyh06a4308_0
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pycparser=2.20=py_2
-  - pygments=2.10.0=pyhd3eb1b0_0
-  - pyparsing=2.4.7=pyhd3eb1b0_0
-  - pyrsistent=0.18.0=py39h9ed2024_0
-  - python=3.9.6=h88f2d9e_1
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - pyzmq=22.2.1=py39h23ab428_1
-  - r-askpass=1.1=r41h28b5c78_2
-  - r-assertthat=0.2.1=r41hc72bb7e_2
-  - r-backports=1.2.1=r41h28b5c78_0
-  - r-base=4.1.1=h4aca3e1_0
-  - r-base64enc=0.1_3=r41h28b5c78_1004
-  - r-blob=1.2.2=r41hc72bb7e_0
-  - r-boot=1.3_28=r41hc72bb7e_0
-  - r-brio=1.1.2=r41h28b5c78_0
-  - r-broom=0.7.9=r41hc72bb7e_0
-  - r-bslib=0.2.5.1=r41hc72bb7e_0
-  - r-cachem=1.0.6=r41h28b5c78_0
-  - r-callr=3.7.0=r41hc72bb7e_0
-  - r-caret=6.0_88=r41h28b5c78_0
-  - r-cellranger=1.1.0=r41hc72bb7e_1003
-  - r-checkmate=2.0.0=r41h28b5c78_1
-  - r-class=7.3_19=r41h28b5c78_0
-  - r-cli=3.0.1=r41h9951f98_1
-  - r-clipr=0.7.1=r41hc72bb7e_0
-  - r-cluster=2.1.2=r41h749f5a1_0
-  - r-codetools=0.2_18=r41hc72bb7e_0
-  - r-colorspace=2.0_2=r41h28b5c78_0
-  - r-commonmark=1.7=r41h28b5c78_1002
-  - r-cpp11=0.3.1=r41hc72bb7e_0
-  - r-crayon=1.4.1=r41hc72bb7e_0
-  - r-crul=1.1.0=r41h785f33e_0
-  - r-curl=4.3.2=r41h28b5c78_0
-  - r-data.table=1.14.0=r41h28b5c78_0
-  - r-dbi=1.1.1=r41hc72bb7e_0
-  - r-dbplyr=2.1.1=r41hc72bb7e_0
-  - r-desc=1.3.0=r41hc72bb7e_0
-  - r-diffobj=0.3.4=r41h28b5c78_0
-  - r-digest=0.6.27=r41h9951f98_0
-  - r-dplyr=1.0.7=r41h9951f98_0
-  - r-dtplyr=1.1.0=r41hc72bb7e_0
-  - r-ellipsis=0.3.2=r41h28b5c78_0
-  - r-essentials=4.1=r41hd8ed1ab_2002
-  - r-evaluate=0.14=r41hc72bb7e_2
-  - r-fansi=0.5.0=r41h28b5c78_0
-  - r-farver=2.1.0=r41h9951f98_0
-  - r-fastmap=1.1.0=r41h9951f98_0
-  - r-forcats=0.5.1=r41hc72bb7e_0
-  - r-foreach=1.5.1=r41hc72bb7e_0
-  - r-foreign=0.8_81=r41h28b5c78_0
-  - r-formatr=1.11=r41hc72bb7e_0
-  - r-fs=1.5.0=r41h9951f98_0
-  - r-gargle=1.2.0=r41hc72bb7e_0
-  - r-generics=0.1.0=r41hc72bb7e_0
-  - r-ggplot2=3.3.5=r41hc72bb7e_0
-  - r-gistr=0.9.0=r41hc72bb7e_0
-  - r-glmnet=4.1_2=r41h749f5a1_0
-  - r-glue=1.4.2=r41h28b5c78_0
-  - r-googledrive=2.0.0=r41hc72bb7e_0
-  - r-googlesheets4=0.3.0=r41hbe3e9c8_0
-  - r-gower=0.2.2=r41h28b5c78_0
-  - r-gridextra=2.3=r41hc72bb7e_1003
-  - r-gtable=0.3.0=r41hc72bb7e_3
-  - r-haven=2.4.3=r41h8a02945_0
-  - r-hexbin=1.28.2=r41h749f5a1_0
-  - r-highr=0.9=r41hc72bb7e_0
-  - r-hms=1.1.0=r41hc72bb7e_0
-  - r-htmltools=0.5.1.1=r41h9951f98_0
-  - r-htmlwidgets=1.5.3=r41hc72bb7e_0
-  - r-httpcode=0.3.0=r41h694c41f_1
-  - r-httpuv=1.6.2=r41h9951f98_0
-  - r-httr=1.4.2=r41hc72bb7e_0
-  - r-ids=1.0.1=r41hc72bb7e_1
-  - r-inline=0.3.19=r41hc72bb7e_0
-  - r-ipred=0.9_11=r41h28b5c78_0
-  - r-irdisplay=1.0=r41hd8ed1ab_0
-  - r-irkernel=1.2=r41hc72bb7e_0
-  - r-isoband=0.2.5=r41h9951f98_0
-  - r-iterators=1.0.13=r41hc72bb7e_0
-  - r-jquerylib=0.1.4=r41hc72bb7e_0
-  - r-jsonlite=1.7.2=r41h28b5c78_0
-  - r-kernsmooth=2.23_20=r41he19034d_0
-  - r-knitr=1.33=r41hc72bb7e_0
-  - r-labeling=0.4.2=r41hc72bb7e_0
-  - r-later=1.2.0=r41h9951f98_0
-  - r-lattice=0.20_44=r41h28b5c78_0
-  - r-lava=1.6.9=r41hc72bb7e_0
-  - r-lazyeval=0.2.2=r41h28b5c78_2
-  - r-lifecycle=1.0.0=r41hc72bb7e_0
-  - r-loo=2.4.1=r41hc72bb7e_0
-  - r-lubridate=1.7.10=r41h9951f98_0
-  - r-magrittr=2.0.1=r41h28b5c78_1
-  - r-maps=3.3.0=r41h28b5c78_1004
-  - r-markdown=1.1=r41h28b5c78_1
-  - r-mass=7.3_54=r41h28b5c78_0
-  - r-matrix=1.3_4=r41hc2c5f09_0
-  - r-matrixstats=0.60.1=r41h28b5c78_0
-  - r-mgcv=1.8_36=r41hc2c5f09_0
-  - r-mime=0.11=r41h28b5c78_0
-  - r-modelmetrics=1.2.2.2=r41h9951f98_1
-  - r-modelr=0.1.8=r41hc72bb7e_0
-  - r-munsell=0.5.0=r41hc72bb7e_1003
-  - r-nlme=3.1_152=r41h749f5a1_0
-  - r-nnet=7.3_16=r41h28b5c78_0
-  - r-numderiv=2016.8_1.1=r41hc72bb7e_3
-  - r-openssl=1.4.4=r41hd95e000_0
-  - r-pbdzmq=0.3_5=r41h5cc58b7_1
-  - r-pillar=1.6.2=r41hc72bb7e_0
-  - r-pkgbuild=1.2.0=r41hc72bb7e_0
-  - r-pkgconfig=2.0.3=r41hc72bb7e_1
-  - r-pkgload=1.2.1=r41h9951f98_0
-  - r-plyr=1.8.6=r41h9951f98_1
-  - r-praise=1.0.0=r41hc72bb7e_1004
-  - r-prettyunits=1.1.1=r41hc72bb7e_1
-  - r-proc=1.17.0.1=r41h9951f98_0
-  - r-processx=3.5.2=r41h28b5c78_0
-  - r-prodlim=2019.11.13=r41h9951f98_1
-  - r-progress=1.2.2=r41hc72bb7e_2
-  - r-promises=1.2.0.1=r41h9951f98_0
-  - r-pryr=0.1.4=r41h9951f98_1004
-  - r-ps=1.6.0=r41h28b5c78_0
-  - r-purrr=0.3.4=r41h28b5c78_1
-  - r-quantmod=0.4.18=r41hc72bb7e_0
-  - r-r6=2.5.1=r41hc72bb7e_0
-  - r-randomforest=4.6_14=r41h749f5a1_1004
-  - r-rappdirs=0.3.3=r41h28b5c78_0
-  - r-rbokeh=0.5.2=r41hc72bb7e_0
-  - r-rcolorbrewer=1.1_2=r41h785f33e_1003
-  - r-rcpp=1.0.7=r41h9951f98_0
-  - r-rcppeigen=0.3.3.9.1=r41he5a6823_0
-  - r-rcppparallel=5.1.4=r41h9951f98_0
-  - r-readr=1.4.0=r41h9951f98_0
-  - r-readxl=1.3.1=r41h8a02945_4
-  - r-recipes=0.1.16=r41hc72bb7e_0
-  - r-recommended=4.1=r41hd8ed1ab_1004
-  - r-rematch=1.0.1=r41hc72bb7e_1003
-  - r-rematch2=2.1.2=r41hc72bb7e_1
-  - r-repr=1.1.3=r41h785f33e_0
-  - r-reprex=2.0.1=r41hc72bb7e_0
-  - r-reshape2=1.4.4=r41h9951f98_1
-  - r-rlang=0.4.11=r41h28b5c78_0
-  - r-rmarkdown=2.10=r41hc72bb7e_0
-  - r-rpart=4.1_15=r41h28b5c78_2
-  - r-rprojroot=2.0.2=r41hc72bb7e_0
-  - r-rstan=2.21.2=r41h9951f98_2
-  - r-rstudioapi=0.13=r41hc72bb7e_0
-  - r-rvest=1.0.1=r41hc72bb7e_0
-  - r-sass=0.4.0=r41h9951f98_0
-  - r-scales=1.1.1=r41hc72bb7e_0
-  - r-selectr=0.4_2=r41hc72bb7e_1
-  - r-shape=1.4.6=r41ha770c72_0
-  - r-shiny=1.6.0=r41hc72bb7e_0
-  - r-sourcetools=0.1.7=r41he49afe7_1002
-  - r-spatial=7.3_14=r41h28b5c78_0
-  - r-squarem=2021.1=r41hc72bb7e_0
-  - r-stanheaders=2.21.0_7=r41h1c00d0a_0
-  - r-stringi=1.7.4=r41hd783aa8_0
-  - r-stringr=1.4.0=r41hc72bb7e_2
-  - r-survival=3.2_13=r41h28b5c78_0
-  - r-sys=3.4=r41h28b5c78_0
-  - r-testthat=3.0.4=r41h9951f98_0
-  - r-tibble=3.1.3=r41h28b5c78_0
-  - r-tidyr=1.1.3=r41h9951f98_0
-  - r-tidyselect=1.1.1=r41hbe3e9c8_0
-  - r-tidyverse=1.3.1=r41hc72bb7e_0
-  - r-timedate=3043.102=r41hc72bb7e_1002
-  - r-tinytex=0.33=r41hc72bb7e_0
-  - r-triebeard=0.3.0=r41he49afe7_1003
-  - r-ttr=0.24.2=r41h28b5c78_0
-  - r-urltools=1.7.3=r41h9951f98_2
-  - r-utf8=1.2.2=r41h28b5c78_0
-  - r-uuid=0.1_4=r41h28b5c78_1
-  - r-v8=3.4.2=r41hfc2dc70_0
-  - r-vctrs=0.3.8=r41h28b5c78_1
-  - r-viridislite=0.4.0=r41hc72bb7e_0
-  - r-waldo=0.3.0=r41hc72bb7e_0
-  - r-withr=2.4.2=r41hc72bb7e_0
-  - r-xfun=0.25=r41h9951f98_0
-  - r-xml2=1.3.2=r41h9951f98_1
-  - r-xtable=1.8_4=r41hc72bb7e_3
-  - r-xts=0.12.1=r41h28b5c78_0
-  - r-yaml=2.2.1=r41h28b5c78_1
-  - r-zoo=1.8_9=r41h28b5c78_1
-  - readline=8.1=h9ed2024_0
-  - send2trash=1.5.0=pyhd3eb1b0_1
-  - setuptools=52.0.0=py39hecd8cb5_0
-  - six=1.16.0=pyhd3eb1b0_0
-  - sqlite=3.36.0=hce871da_0
-  - tapi=1100.0.11=h9ce4665_0
-  - terminado=0.9.4=py39hecd8cb5_0
-  - testpath=0.5.0=pyhd3eb1b0_0
-  - tk=8.6.10=hb0a8c7a_0
-  - tktable=2.10=h1de35cc_0
-  - tornado=6.1=py39h9ed2024_0
-  - traitlets=5.0.5=pyhd3eb1b0_0
-  - tzdata=2021a=h5d7bf9c_0
-  - wcwidth=0.2.5=py_0
-  - webencodings=0.5.1=py39hecd8cb5_1
-  - wheel=0.37.0=pyhd3eb1b0_0
-  - xz=5.2.5=h1de35cc_0
-  - zeromq=4.3.4=h23ab428_0
-  - zipp=3.5.0=pyhd3eb1b0_0
-  - zlib=1.2.11=h1de35cc_3
-  - zstd=1.5.0=h582d3a0_0
+  - _r-mutex=1.0.0
+  - appnope=0.1.2
+  - argon2-cffi=20.1.0
+  - async_generator=1.10
+  - attrs=21.2.0
+  - backcall=0.2.0
+  - bleach=4.0.0
+  - bwidget=1.9.11
+  - bzip2=1.0.8
+  - c-ares=1.17.1
+  - ca-certificates=2021.7.5
+  - cairo=1.16.0
+  - cctools_osx-64=973.0.1
+  - certifi=2021.5.30
+  - cffi=1.14.6
+  - clang=12.0.1
+  - clang-12=12.0.1
+  - clang_osx-64=12.0.1
+  - clangxx=12.0.1
+  - clangxx_osx-64=12.0.1
+  - compiler-rt=12.0.1
+  - compiler-rt_osx-64=12.0.1
+  - curl=7.78.0
+  - decorator=5.0.9
+  - defusedxml=0.7.1
+  - entrypoints=0.3
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=2.001
+  - font-ttf-source-code-pro=2.030
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.13.1
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - freetype=2.10.4
+  - fribidi=1.0.10
+  - gettext=0.21.0
+  - gfortran_impl_osx-64=9.3.0
+  - gfortran_osx-64=9.3.0
+  - gmp=6.2.1
+  - graphite2=1.3.14
+  - gsl=2.6
+  - harfbuzz=2.9.0
+  - icu=68.1
+  - importlib-metadata=3.10.0
+  - importlib_metadata=3.10.0
+  - ipykernel=5.3.4
+  - ipython=7.26.0
+  - ipython_genutils=0.2.0
+  - isl=0.22.1
+  - jbig=2.1
+  - jedi=0.18.0
+  - jinja2=3.0.1
+  - jpeg=9d
+  - jsonschema=3.2.0
+  - jupyter_client=6.1.12
+  - jupyter_core=4.7.1
+  - jupyterlab_pygments=0.1.2
+  - krb5=1.19.2
+  - ld64_osx-64=609
+  - ldid=2.1.2
+  - lerc=2.2.1
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libclang-cpp12=12.0.1
+  - libcurl=7.78.0
+  - libcxx=12.0.1
+  - libdeflate=1.7
+  - libedit=3.1.20210216
+  - libev=4.33
+  - libffi=3.3
+  - libgfortran=5.0.0
+  - libgfortran-devel_osx-64=9.3.0
+  - libgfortran5=9.3.0
+  - libglib=2.68.4
+  - libiconv=1.16
+  - liblapack=3.9.0
+  - libllvm12=12.0.1
+  - libnghttp2=1.41.0
+  - libopenblas=0.3.17
+  - libpng=1.6.37
+  - libsodium=1.0.18
+  - libssh2=1.9.0
+  - libtiff=4.3.0
+  - libv8=8.9.83
+  - libwebp-base=1.2.0
+  - libxml2=2.9.12
+  - llvm-openmp=12.0.1
+  - llvm-tools=12.0.1
+  - lz4-c=1.9.3
+  - make=4.2.1
+  - markupsafe=2.0.1
+  - matplotlib-inline=0.1.2
+  - mistune=0.8.4
+  - mpc=1.1.0
+  - mpfr=4.0.2
+  - nbclient=0.5.3
+  - nbconvert=6.1.0
+  - nbformat=5.1.3
+  - ncurses=6.2
+  - nest-asyncio=1.5.1
+  - notebook=6.4.3
+  - openssl=1.1.1k
+  - packaging=21.0
+  - pandoc=2.12
+  - pandocfilters=1.4.3
+  - pango=1.48.9
+  - parso=0.8.2
+  - pcre=8.45
+  - pcre2=10.37
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pip=21.2.4
+  - pixman=0.40.0
+  - prometheus_client=0.11.0
+  - prompt-toolkit=3.0.17
+  - ptyprocess=0.7.0
+  - pycparser=2.20
+  - pygments=2.10.0
+  - pyparsing=2.4.7
+  - pyrsistent=0.18.0
+  - python=3.9.6
+  - python-dateutil=2.8.2
+  - pyzmq=22.2.1
+  - r-askpass=1.1
+  - r-assertthat=0.2.1
+  - r-backports=1.2.1
+  - r-base=4.1.1
+  - r-base64enc=0.1_3
+  - r-blob=1.2.2
+  - r-boot=1.3_28
+  - r-brio=1.1.2
+  - r-broom=0.7.9
+  - r-bslib=0.2.5.1
+  - r-cachem=1.0.6
+  - r-callr=3.7.0
+  - r-caret=6.0_88
+  - r-cellranger=1.1.0
+  - r-checkmate=2.0.0
+  - r-class=7.3_19
+  - r-cli=3.0.1
+  - r-clipr=0.7.1
+  - r-cluster=2.1.2
+  - r-codetools=0.2_18
+  - r-colorspace=2.0_2
+  - r-commonmark=1.7
+  - r-cpp11=0.3.1
+  - r-crayon=1.4.1
+  - r-crul=1.1.0
+  - r-curl=4.3.2
+  - r-data.table=1.14.0
+  - r-dbi=1.1.1
+  - r-dbplyr=2.1.1
+  - r-desc=1.3.0
+  - r-diffobj=0.3.4
+  - r-digest=0.6.27
+  - r-dplyr=1.0.7
+  - r-dtplyr=1.1.0
+  - r-ellipsis=0.3.2
+  - r-essentials=4.1
+  - r-evaluate=0.14
+  - r-fansi=0.5.0
+  - r-farver=2.1.0
+  - r-fastmap=1.1.0
+  - r-forcats=0.5.1
+  - r-foreach=1.5.1
+  - r-foreign=0.8_81
+  - r-formatr=1.11
+  - r-fs=1.5.0
+  - r-gargle=1.2.0
+  - r-generics=0.1.0
+  - r-ggplot2=3.3.5
+  - r-gistr=0.9.0
+  - r-glmnet=4.1_2
+  - r-glue=1.4.2
+  - r-googledrive=2.0.0
+  - r-googlesheets4=0.3.0
+  - r-gower=0.2.2
+  - r-gridextra=2.3
+  - r-gtable=0.3.0
+  - r-haven=2.4.3
+  - r-hexbin=1.28.2
+  - r-highr=0.9
+  - r-hms=1.1.0
+  - r-htmltools=0.5.1.1
+  - r-htmlwidgets=1.5.3
+  - r-httpcode=0.3.0
+  - r-httpuv=1.6.2
+  - r-httr=1.4.2
+  - r-ids=1.0.1
+  - r-inline=0.3.19
+  - r-ipred=0.9_11
+  - r-irdisplay=1.0
+  - r-irkernel=1.2
+  - r-isoband=0.2.5
+  - r-iterators=1.0.13
+  - r-jquerylib=0.1.4
+  - r-jsonlite=1.7.2
+  - r-kernsmooth=2.23_20
+  - r-knitr=1.33
+  - r-labeling=0.4.2
+  - r-later=1.2.0
+  - r-lattice=0.20_44
+  - r-lava=1.6.9
+  - r-lazyeval=0.2.2
+  - r-lifecycle=1.0.0
+  - r-loo=2.4.1
+  - r-lubridate=1.7.10
+  - r-magrittr=2.0.1
+  - r-maps=3.3.0
+  - r-markdown=1.1
+  - r-mass=7.3_54
+  - r-matrix=1.3_4
+  - r-matrixstats=0.60.1
+  - r-mgcv=1.8_36
+  - r-mime=0.11
+  - r-modelmetrics=1.2.2.2
+  - r-modelr=0.1.8
+  - r-munsell=0.5.0
+  - r-nlme=3.1_152
+  - r-nnet=7.3_16
+  - r-numderiv=2016.8_1.1
+  - r-openssl=1.4.4
+  - r-pbdzmq=0.3_5
+  - r-pillar=1.6.2
+  - r-pkgbuild=1.2.0
+  - r-pkgconfig=2.0.3
+  - r-pkgload=1.2.1
+  - r-plyr=1.8.6
+  - r-praise=1.0.0
+  - r-prettyunits=1.1.1
+  - r-proc=1.17.0.1
+  - r-processx=3.5.2
+  - r-prodlim=2019.11.13
+  - r-progress=1.2.2
+  - r-promises=1.2.0.1
+  - r-pryr=0.1.4
+  - r-ps=1.6.0
+  - r-purrr=0.3.4
+  - r-quantmod=0.4.18
+  - r-r6=2.5.1
+  - r-randomforest=4.6_14
+  - r-rappdirs=0.3.3
+  - r-rbokeh=0.5.2
+  - r-rcolorbrewer=1.1_2
+  - r-rcpp=1.0.7
+  - r-rcppeigen=0.3.3.9.1
+  - r-rcppparallel=5.1.4
+  - r-readr=1.4.0
+  - r-readxl=1.3.1
+  - r-recipes=0.1.16
+  - r-recommended=4.1
+  - r-rematch=1.0.1
+  - r-rematch2=2.1.2
+  - r-repr=1.1.3
+  - r-reprex=2.0.1
+  - r-reshape2=1.4.4
+  - r-rlang=0.4.11
+  - r-rmarkdown=2.10
+  - r-rpart=4.1_15
+  - r-rprojroot=2.0.2
+  - r-rstan=2.21.2
+  - r-rstudioapi=0.13
+  - r-rvest=1.0.1
+  - r-sass=0.4.0
+  - r-scales=1.1.1
+  - r-selectr=0.4_2
+  - r-shape=1.4.6
+  - r-shiny=1.6.0
+  - r-sourcetools=0.1.7
+  - r-spatial=7.3_14
+  - r-squarem=2021.1
+  - r-stanheaders=2.21.0_7
+  - r-stringi=1.7.4
+  - r-stringr=1.4.0
+  - r-survival=3.2_13
+  - r-sys=3.4
+  - r-testthat=3.0.4
+  - r-tibble=3.1.3
+  - r-tidyr=1.1.3
+  - r-tidyselect=1.1.1
+  - r-tidyverse=1.3.1
+  - r-timedate=3043.102
+  - r-tinytex=0.33
+  - r-triebeard=0.3.0
+  - r-ttr=0.24.2
+  - r-urltools=1.7.3
+  - r-utf8=1.2.2
+  - r-uuid=0.1_4
+  - r-v8=3.4.2
+  - r-vctrs=0.3.8
+  - r-viridislite=0.4.0
+  - r-waldo=0.3.0
+  - r-withr=2.4.2
+  - r-xfun=0.25
+  - r-xml2=1.3.2
+  - r-xtable=1.8_4
+  - r-xts=0.12.1
+  - r-yaml=2.2.1
+  - r-zoo=1.8_9
+  - readline=8.1
+  - send2trash=1.5.0
+  - setuptools=52.0.0
+  - six=1.16.0
+  - sqlite=3.36.0
+  - tapi=1100.0.11
+  - terminado=0.9.4
+  - testpath=0.5.0
+  - tk=8.6.10
+  - tktable=2.10
+  - tornado=6.1
+  - traitlets=5.0.5
+  - tzdata=2021a
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - wheel=0.37.0
+  - xz=5.2.5
+  - zeromq=4.3.4
+  - zipp=3.5.0
+  - zlib=1.2.11
+  - zstd=1.5.0
 prefix: /Users/magdalenarussell/anaconda3/envs/infection-timing
