--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ plots/
 *.html
 *.key
 *.pptx
+*.rds
 slurm*
 .DS_Store
 
@@ -49,3 +50,5 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+
