--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: infection-timing
 channels:
   - conda-forge
   - defaults
+  - bioconda
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
@@ -18,7 +19,7 @@ dependencies:
   - bwidget=1.9.14=ha770c72_1
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.17.2=h7f98852_0
-  - ca-certificates=2021.10.8=ha878542_0
+  - ca-certificates=2022.9.24=ha878542_0
   - cairo=1.16.0=h6cf1ce9_1008
   - cffi=1.14.6=py39h4bc2ebd_1
   - curl=7.79.1=h494985f_1
@@ -40,6 +41,7 @@ dependencies:
   - gettext=0.19.8.1=h73d1719_1008
   - gfortran_impl_linux-64=9.4.0=h0003116_11
   - gfortran_linux-64=9.4.0=hf0ab688_1
+  - gmp=6.2.1=h58526e2_0
   - graphite2=1.3.13=h58526e2_1001
   - gsl=2.7=he838d99_0
   - gxx_impl_linux-64=9.4.0=h03d3576_11
@@ -70,11 +72,11 @@ dependencies:
   - libev=4.33=h516909a_1
   - libffi=3.4.2=h9c3ff4c_4
   - libgcc-devel_linux-64=9.4.0=hd854feb_11
-  - libgcc-ng=11.2.0=h1d223b6_11
+  - libgcc-ng=12.1.0=h8d9b700_16
   - libgfortran-ng=11.2.0=h69a702a_11
   - libgfortran5=11.2.0=h5c6108e_11
   - libglib=2.68.4=h174f98d_1
-  - libgomp=11.2.0=h1d223b6_11
+  - libgomp=12.1.0=h8d9b700_16
   - libiconv=1.16=h516909a_0
   - liblapack=3.9.0=12_linux64_openblas
   - libnghttp2=1.43.0=ha19adfc_1
@@ -103,7 +105,7 @@ dependencies:
   - ncurses=6.2=h58526e2_4
   - nest-asyncio=1.5.1=pyhd8ed1ab_0
   - notebook=6.4.4=pyha770c72_0
-  - openssl=3.0.3=h166bdaf_0
+  - openssl=3.0.7=h166bdaf_0
   - packaging=21.0=pyhd8ed1ab_0
   - pandoc=2.14.2=h7f98852_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
@@ -127,11 +129,13 @@ dependencies:
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python_abi=3.9=2_cp39
   - pyzmq=22.3.0=py39h37b5a0c_0
+  - r-abind=1.4_5=r41hc72bb7e_1003
   - r-askpass=1.1=r41hcfec24a_2
   - r-assertthat=0.2.1=r41hc72bb7e_2
   - r-backports=1.2.1=r41hcfec24a_0
   - r-base=4.1.1=hb93adac_1
   - r-base64enc=0.1_3=r41hcfec24a_1004
+  - r-bayesplot=1.9.0=r41hc72bb7e_0
   - r-bit=4.0.4=r41hcfec24a_0
   - r-bit64=4.0.5=r41hcfec24a_0
   - r-blob=1.2.2=r41hc72bb7e_0
@@ -150,9 +154,11 @@ dependencies:
   - r-cluster=2.1.2=r41h859d828_0
   - r-codetools=0.2_18=r41hc72bb7e_0
   - r-colorspace=2.0_2=r41hcfec24a_0
+  - r-colourpicker=1.1.1=r41hc72bb7e_0
   - r-commonmark=1.7=r41hcfec24a_1002
   - r-cpp11=0.4.0=r41hc72bb7e_0
   - r-crayon=1.4.1=r41hc72bb7e_0
+  - r-crosstalk=1.2.0=r41hc72bb7e_0
   - r-crul=1.1.0=r41h785f33e_0
   - r-curl=4.3.2=r41hcfec24a_0
   - r-data.table=1.14.2=r41hcfec24a_0
@@ -161,8 +167,11 @@ dependencies:
   - r-desc=1.4.0=r41hc72bb7e_0
   - r-diffobj=0.3.5=r41hcfec24a_0
   - r-digest=0.6.28=r41h03ef668_0
+  - r-distributional=0.3.1=r41hc72bb7e_0
   - r-dplyr=1.0.7=r41h03ef668_0
+  - r-dt=0.25=r41hc72bb7e_0
   - r-dtplyr=1.1.0=r41hc72bb7e_0
+  - r-dygraphs=1.1.1.6=r41hc72bb7e_1003
   - r-e1071=1.7_9=r41h03ef668_0
   - r-ellipsis=0.3.2=r41hcfec24a_0
   - r-essentials=4.1=r41hd8ed1ab_2002
@@ -170,6 +179,7 @@ dependencies:
   - r-fansi=0.4.2=r41hcfec24a_0
   - r-farver=2.1.0=r41h03ef668_0
   - r-fastmap=1.1.0=r41h03ef668_0
+  - r-fastmatrix=0.4_124=r41hb361e29_0
   - r-fontawesome=0.2.2=r41hc72bb7e_0
   - r-forcats=0.5.1=r41hc72bb7e_0
   - r-foreach=1.5.1=r41hc72bb7e_0
@@ -180,7 +190,9 @@ dependencies:
   - r-future.apply=1.8.1=r41hc72bb7e_0
   - r-gargle=1.2.0=r41hc72bb7e_0
   - r-generics=0.1.0=r41hc72bb7e_0
+  - r-ggh4x=0.2.3=r41hc72bb7e_0
   - r-ggplot2=3.3.5=r41hc72bb7e_0
+  - r-ggridges=0.5.4=r41hc72bb7e_0
   - r-gistr=0.9.0=r41hc72bb7e_0
   - r-glmnet=4.1_2=r41h859d828_0
   - r-globals=0.14.0=r41hc72bb7e_0
@@ -190,6 +202,7 @@ dependencies:
   - r-gower=0.2.2=r41hcfec24a_0
   - r-gridextra=2.3=r41hc72bb7e_1003
   - r-gtable=0.3.0=r41hc72bb7e_3
+  - r-gtools=3.9.3=r41h06615bd_0
   - r-haven=2.4.3=r41h2713e49_0
   - r-hexbin=1.28.2=r41h859d828_0
   - r-highr=0.9=r41hc72bb7e_0
@@ -200,6 +213,7 @@ dependencies:
   - r-httpuv=1.6.3=r41h03ef668_0
   - r-httr=1.4.2=r41hc72bb7e_0
   - r-ids=1.0.1=r41hc72bb7e_1
+  - r-igraph=1.3.0=r41hf10d5bd_0
   - r-inline=0.3.19=r41hc72bb7e_0
   - r-ipred=0.9_12=r41hcfec24a_0
   - r-irdisplay=1.0=r41hd8ed1ab_0
@@ -210,6 +224,7 @@ dependencies:
   - r-jsonlite=1.7.2=r41hcfec24a_0
   - r-kernsmooth=2.23_20=r41h742201e_0
   - r-knitr=1.35=r41hc72bb7e_0
+  - r-l1pack=0.41=r41h8da6f51_0
   - r-labeling=0.4.2=r41hc72bb7e_0
   - r-later=1.2.0=r41h03ef668_0
   - r-lattice=0.20_45=r41hcfec24a_0
@@ -217,6 +232,7 @@ dependencies:
   - r-lazyeval=0.2.2=r41hcfec24a_2
   - r-lifecycle=1.0.1=r41hc72bb7e_0
   - r-listenv=0.8.0=r41hc72bb7e_1
+  - r-lme4=1.1_29=r41h7525677_0
   - r-lobstr=1.1.1=r41h03ef668_1
   - r-loo=2.4.1=r41hc72bb7e_0
   - r-lubridate=1.8.0=r41h03ef668_0
@@ -228,13 +244,17 @@ dependencies:
   - r-matrixstats=0.61.0=r41hcfec24a_0
   - r-mgcv=1.8_38=r41he454529_0
   - r-mime=0.12=r41hcfec24a_0
+  - r-miniui=0.1.1.1=r41hc72bb7e_1002
+  - r-minqa=1.2.4=r41h5ee154c_1006
   - r-modelmetrics=1.2.2.2=r41h03ef668_1
   - r-modelr=0.1.8=r41hc72bb7e_0
   - r-munsell=0.5.0=r41hc72bb7e_1003
   - r-nlme=3.1_153=r41h859d828_0
+  - r-nloptr=1.2.2.3=r41h5ee154c_0
   - r-nnet=7.3_16=r41hcfec24a_0
   - r-numderiv=2016.8_1.1=r41hc72bb7e_3
   - r-openssl=1.4.5=r41he82ab30_1
+  - r-packrat=0.8.1=r41hc72bb7e_0
   - r-parallelly=1.28.1=r41hc72bb7e_0
   - r-pbdzmq=0.3_5=r41h42bf92c_1
   - r-pillar=1.6.3=r41hc72bb7e_0
@@ -242,6 +262,7 @@ dependencies:
   - r-pkgconfig=2.0.3=r41hc72bb7e_1
   - r-pkgload=1.2.3=r41h03ef668_0
   - r-plyr=1.8.6=r41h03ef668_1
+  - r-posterior=1.3.1=r41hc72bb7e_0
   - r-praise=1.0.0=r41hc72bb7e_1004
   - r-prettyunits=1.1.1=r41hc72bb7e_1
   - r-proc=1.18.0=r41h03ef668_0
@@ -276,7 +297,10 @@ dependencies:
   - r-rmarkdown=2.11=r41hc72bb7e_0
   - r-rpart=4.1_15=r41hcfec24a_2
   - r-rprojroot=2.0.2=r41hc72bb7e_0
+  - r-rsconnect=0.8.27=r41hc72bb7e_0
   - r-rstan=2.21.2=r41h03ef668_2
+  - r-rstanarm=2.21.3=r41h7525677_0
+  - r-rstantools=2.2.0=r41h7525677_0
   - r-rstudioapi=0.13=r41hc72bb7e_0
   - r-rvest=1.0.2=r41hc72bb7e_0
   - r-sass=0.4.0=r41h03ef668_0
@@ -284,15 +308,21 @@ dependencies:
   - r-selectr=0.4_2=r41hc72bb7e_1
   - r-shape=1.4.6=r41ha770c72_0
   - r-shiny=1.7.1=r41h785f33e_0
+  - r-shinyjs=2.1.0=r41hc72bb7e_0
+  - r-shinystan=2.6.0=r41hc72bb7e_0
+  - r-shinythemes=1.2.0=r41hc72bb7e_0
   - r-sourcetools=0.1.7=r41h9c3ff4c_1002
   - r-spatial=7.3_14=r41hcfec24a_0
   - r-squarem=2021.1=r41hc72bb7e_0
   - r-stanheaders=2.21.0_7=r41h5ee154c_0
+  - r-statmod=1.4.37=r41hc3ea6d6_0
   - r-stringi=1.7.5=r41hcabe038_0
   - r-stringr=1.4.0=r41hc72bb7e_2
   - r-survival=3.2_13=r41hcfec24a_0
   - r-sys=3.4=r41hcfec24a_0
+  - r-tensora=0.36.2=r41hcfec24a_0
   - r-testthat=3.1.0=r41h03ef668_0
+  - r-threejs=0.3.3=r41hc72bb7e_1
   - r-tibble=3.1.5=r41hcfec24a_0
   - r-tidyr=1.1.4=r41h03ef668_0
   - r-tidyselect=1.1.1=r41hc72bb7e_0
