--- a/py2_environment.yml
+++ b/py2_environment.yml
@@ -2,6 +2,7 @@ name: infection-timing_py2
 channels:
   - conda-forge
   - defaults
+  - bioconda
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
